--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none;
 }
 
 .xwm291h8j5f22jxm6hfe {
@@ -51,3 +57,4 @@ body {
     text-align: center;
     width: 100%;
 }
+
